# rookie-numbers

./: Cargo.toml  README.md
.trunk/: trunk.yaml
crates/sha256/: Cargo.toml
crates/sha256/benches/: sha256.rs
crates/sha256/src/: design.py  lib.rs  partitions.rs  relations.rs  sha256.rs  smalloc_init.rs
crates/sha256/src/components/: compression.rs  mod.rs  scheduling.rs
crates/sha256/src/preprocessed/: big_sigma_0.rs  big_sigma_1.rs  ch_left.rs  ch_right.rs  maj.rs  mod.rs  range_check_add.rs  sigma_0.rs  sigma_1.rs
crates/vm/: Cargo.toml
crates/vm/benches/: example.rs
crates/vm/src/: errors.rs  lib.rs  prover.rs
crates/vm/src/air/: mod.rs  preprocessed.rs  relations.rs
crates/vm/src/air/components/: memory.rs  mod.rs  multiple_constraints.rs  single_constraint.rs  single_constraint_with_relation.rs
crates/vm/tests/: prover.rs
