[workspace]
members = ["crates/vm", "crates/sha256"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
stwo-prover = { git = "https://github.com/starkware-libs/stwo", rev = "8b5436d", features = [
  "parallel",
] }
stwo-air-utils-derive = { git = "https://github.com/starkware-libs/stwo", rev = "8b5436d" }
stwo-air-utils = { git = "https://github.com/starkware-libs/stwo", rev = "8b5436d" }
rayon = "1.10.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
num-traits = "0.2.19"
rand = "0.8.5"
thiserror = { version = "2.0.10", default-features = false }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
bincode = "1.3.3"
itertools = "0.13.0"
