[package]
name = "sha256"
version.workspace = true
edition.workspace = true

[dependencies]
stwo-prover.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
num-traits.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
itertools.workspace = true
