[package]
name = "vm"
version.workspace = true
edition.workspace = true

[dependencies]
stwo-prover.workspace = true
stwo-air-utils-derive.workspace = true
stwo-air-utils.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
num-traits.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
rayon.workspace = true

[dev-dependencies]
divan = "0.1.21"
peak_alloc = "0.2"

[[bench]]
name = "example"
harness = false
